_sass/custom.scss
// Default to light theme
$primary-color: #3a3f58;
$background-color: #f7f8fa;
$text-color: #333;

// Set theme colors based on the color_scheme variable
@if $color_scheme == 'dark' {
  $primary-color: #333;
  $background-color: #000;
  $text-color: #fff;
} @else if $color_scheme == 'aqua' {
  $primary-color: #598392;
  $background-color: #eff6e0;
  $text-color: #01161e;
} @else if $color_scheme == 'desert' {
  $primary-color: #925959;
  $background-color: #f6f1e0;
  $text-color: #1e0101;
}


.navbar, h1, h2, h3, h4, h5, h6 {
  font-family: 'Merriweather', serif;
  font-weight: 700;
}

h1 {
  margin-bottom: 25px;
}

body {
  font-family: "Open Sans", 'Montserrat', 'Helvetica Neue' sans-serif;
  line-height: 1.6;
  background-color: $background-color;
  color: $text-color;
  margin: 0;
  padding: 0;
}

header, footer {
  padding: 10px 5px;
  background: $primary-color;
  color: $background-color;
}

header {
  margin-bottom: 40px;
}

footer {
  text-align: center;
  margin-top: 40px;
  font-size: 0.9em;
}

.container {
  max-width: 600px;
}

.project-item img {
  max-width: 100%;
  height: auto;
  border-radius: 8px;
}

.project-item h3 {
  margin-top: 15px;
  font-size: 1.25em;
}

.btn {
  display: inline-block;
  padding: 10px 20px;
  color: $background-color;
  text-decoration: none;
  border-radius: 5px;
  transition: background 0.3s;
}

.highlight {
  background-color: #2d2d2d;
  color: #e0e0e0;
  padding: 10px 0;
  margin-bottom: 10px;
  border-radius: 5px;
  overflow-x: auto;
}

.highlight .k { color: #c792ea; }
.highlight .nb { color: #82aaff; }
.highlight .s { color: #c3e88d; }
.highlight .mi { color: #f78c6c; }
.highlight .c { color: #5c6370; }
.highlight .p { color: #89ddff; }
.highlight .o { color: #ff5370; }

.profile-image {
  float: left;
  margin: 20px 25px 25px 0;
  width: 150px;
  vertical-align: top;
}

.project-image {
  display: block;
  margin: 20px auto 25px auto;  
  max-width: 800px;            
  width: 100%;                 
  height: auto;
}

.inline-image {
  max-width: 350px;
  margin: 0px 25px 15px 25px;
  vertical-align: top;

  &-l {
    @extend .inline-image;
    float: left;
    margin-left: 0;
  }

  &-r {
    @extend .inline-image;
    float: right;
    margin-right: 0;
  }
}

.profile-image, .project-image {
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}


.gallery-container {
  display: flex;
  justify-content: center;
  margin: auto;
}

.project-gallery {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  gap: 20px;
  padding: 20px;
  margin: 0 auto;
  max-width: 100%;
}

.gallery-item {
  overflow: hidden;
  text-align: center;
  transition: transform 0.3s ease;
  max-width: 250px; 
  max-height: 300px; 
}

.gallery-item img {
  width: 100%;
  height: 85%;
  display: block;
  object-fit: cover;
  object-position: center;
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);

}

.gallery-item p {
  margin: 13px 0;
  font-size: .9rem;
  color: $text-color;
}

.gallery-item a {
  text-decoration: none;
}

.gallery-item:hover {
  transform: scale(1.05); 
}

.project-image {
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.back-arrow {
  display: inline-block;
  font-size: 1.1em;
  color: #686d85; 
  text-decoration: none;
  margin-bottom: 1em;
  font-weight: bold;
  transition: color 0.3s ease, transform 0.3s ease;
}

.back-arrow:hover {
  color: #3a3f58; 
  transform: translateX(-4px);
}

